fix the gap on the left side on the webpage

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -57,14 +57,6 @@ footer {
     justify-content: center;
 }
 
-.courses {
-    display: grid;
-    grid-template-rows: repeat(3, 1fr);
-    gap: 10px;
-    justify-content: center;
-    padding: 0;
-    margin: 0;
-}
 
 .courses li:nth-child(1),
 .courses li:nth-child(2) {
@@ -76,6 +68,22 @@ footer {
         display: flex;
         justify-content: center;
     }
-    
+    .courses {
+        display: grid;
+        grid-template-rows: repeat(3, 1fr);
+        gap: 10px;
+        padding: 0;
+        margin: 0;
+    }
 }
+@media screen and (min-width: 600px) {
+    .courses {
+        display: grid;
+        grid-template-rows: repeat(3, 1fr);
+        grid-template-columns: repeat(3,2fr);
+        gap: 10px;
+        padding: 0;
+        margin: 0;
+    }
 
+  }
